--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,8 @@
-pip==25.1.1
-setuptools>=65.0
-wheel
 fastapi==0.110.0
 uvicorn[standard]==0.30.0
 sqlalchemy==2.0.29
 passlib[bcrypt]==1.7.4
 python-jose[cryptography]==3.3.0
 pydantic==2.7.1
+pydantic-core==2.18.2
 cryptography==42.0.7
